Import of acarbey/temizaltyap

--- a/package.json
+++ b/package.json
@@ -1,19 +1,76 @@
 {
-  "//1": "describes your app and its dependencies",
-  "//2": "https://docs.npmjs.com/files/package.json",
-  "//3": "updating this file will download and update your packages",
+  "//1": "ACAR Tarafından hazırlanıp özellikle etkinlikleri ayarlanmış bir register botudur.",
+  "//2": "Yüksek performans ve gereksiz kod olmadan sorunsuz kullanım.",
   "name": "hello-express",
   "version": "0.0.1",
-  "description": "A simple Node app built on Express, instantly up and running.",
-  "main": "server.js",
+  "description": "Selahattin ACAR Register Botu Alt Yapısı",
+  "main": "acar.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node acar.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "array-sort": "^1.0.0",
+    "body-parser": "^1.19.0",
+    "canvas": "^2.6.1",
+    "chalk": "^3.0.0",
+    "cleverbot.io": "^1.0.4",
+    "colors": "^1.4.0",
+    "common-tags": "^1.8.0",
+    "cpu-stat": "^2.0.1",
+    "ctx": "^0.3.0",
+    "db": "^2.0.0",
+    "dblapi.js": "^2.3.0",
+    "discord.js": "^11.5.1",
+    "discord.js-commando": "^0.10.0",
+    "ejs": "^3.0.2",
+    "express": "^4.17.1",
+    "express-session": "^1.16.1",
+    "ffmpeg": "^0.0.4",
+    "ffmpeg-binaries": "^4.0.0",
+    "figlet": "^1.3.0",
+    "fs": "^0.0.2",
+    "gifencoder": "^2.0.1",
+    "google-it": "^1.5.0",
+    "google-translate-api": "^2.3.0",
+    "hastebin-gen": "^2.0.5",
+    "helmet": "^3.21.3",
+    "humanize-duration": "^3.22.0",
+    "jimp": "^0.10.0",
+    "level-session-store": "^2.2.0",
+    "marked": "^0.8.2",
+    "moment": "^2.24.0",
+    "moment-duration-format": "^2.2.2",
+    "moment-timezone": "^0.5.27",
+    "ms": "^2.1.2",
+    "node-opus": "^0.3.2",
+    "node-superfetch": "^0.1.10",
+    "oauth": "^0.9.15",
+    "oauth2": "^0.0.1",
+    "os": "^0.1.1",
+    "parse-ms": "^2.0.0",
+    "passport": "^0.4.1",
+    "passport-discord": "^0.1.3",
+    "passport-oauth2": "^1.5.0",
+    "passport-strategy": "^1.0.0",
+    "path": "^0.12.7",
+    "quick-db": "^1.0.5",
+    "quick.db": "7.0.0-b22",
+    "quickdb": "^1.0.5",
+    "random-puppy": "^1.1.0",
+    "randomstring": "^1.1.5",
+    "request-promise-native": "^1.0.8",
+    "simple-youtube-api": "^5.2.1",
+    "snekfetch": "^4.0.4",
+    "speedtest-net": "^2.1.0",
+    "steam-provider": "^0.3.2",
+    "superagent": "^5.2.2",
+    "url": "^0.11.0",
+    "useful-tools": "^0.2.6",
+    "weather-js": "^2.0.0",
+    "ytdl-core": "^2.0.1"
   },
   "engines": {
-    "node": "12.x"
+    "node": "8.x"
   },
   "repository": {
     "url": "https://glitch.com/edit/#!/hello-express"
