--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "url": "^0.11.0",
     "useful-tools": "^0.2.6",
     "weather-js": "^2.0.0",
-    "ytdl-core": "^2.0.1"
+    "ytdl-core": "^2.0.1",
+    "google-tts-api": "^0.0.4"
   },
   "engines": {
     "node": "8.x"
